v3/crates/engine/tests/snapshots/execution__common__ir_execute__models__select_many__nested_select__postgres_admin.snap
---
source: crates/engine/tests/common.rs
expression: query_ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "InstitutionMany",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "institutions",
                            ),
                        ),
                        arguments: {},
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: None,
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "id",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "id",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                        Alias(
                            Identifier(
                                "location",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "location",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: Some(
                                    {
                                        Alias(
                                            Identifier(
                                                "city",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "city",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                        Alias(
                                            Identifier(
                                                "campuses",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "campuses",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        Alias(
                            Identifier(
                                "location_country",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "location",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: Some(
                                    {
                                        Alias(
                                            Identifier(
                                                "country",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "country",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: Some(
                                                    {
                                                        Alias(
                                                            Identifier(
                                                                "name",
                                                            ),
                                                        ): Field(
                                                            ObjectFieldSelection {
                                                                target: ObjectFieldTarget {
                                                                    field_name: FieldName(
                                                                        Identifier(
                                                                            "name",
                                                                        ),
                                                                    ),
                                                                    arguments: {},
                                                                },
                                                                selection: None,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        Alias(
                            Identifier(
                                "staff",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "staff",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: Some(
                                    {
                                        Alias(
                                            Identifier(
                                                "last_name",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "last_name",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                        Alias(
                                            Identifier(
                                                "specialities",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "specialities",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        Alias(
                            Identifier(
                                "staff_first_name",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "staff",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: Some(
                                    {
                                        Alias(
                                            Identifier(
                                                "first_name",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "first_name",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        Alias(
                            Identifier(
                                "departments",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "departments",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                    },
                },
            ),
        },
    },
)
